Update Post “多线程和异步专题”

--- a/source/_posts/多线程和异步专题.md
+++ b/source/_posts/多线程和异步专题.md
@@ -2,4 +2,165 @@
 title: 多线程和异步专题
 date: 2021-12-21T08:58:41.072Z
 ---
-1.
+1. 线程、进程和多线程
+2. 多线程
+
+   1. 继承Thread类
+
+      ```java
+      public class MyThread extends Thread {
+
+          @Override
+          public void run(){
+              for (int i = 0; i < 200; i++) {
+                  System.out.println("线程执行....");
+              }
+          }
+
+          public static void main(String[] args) {
+              MyThread myThread = new MyThread(); 
+              myThread.start(); //一个线程启动
+
+              for (int i = 0; i < 500; i++) {
+                  System.out.println("主线程执行，，，，");
+              }
+          }
+
+      }
+
+      ```
+   2. 实现Runabble接口
+
+      ```java
+      public class MyThread3 implements Runnable {
+
+          @Override
+          public void run() {
+              for (int i = 0; i < 200; i++) {
+                  System.out.println("线程。。。。。。");
+              }
+          }
+
+          public static void main(String[] args) {
+
+              MyThread3 thread3 = new MyThread3();
+
+              new Thread(thread3).start();
+
+              for (int i = 0; i < 200; i++) {
+                  System.out.println("主子线程....");
+              }
+          }
+      }
+      ```
+
+      龟兔赛跑
+
+      ```java
+      public class Race implements Runnable {
+          private String winer= null;
+          @Override
+          public void run() {
+              for (int i = 0; i <= 100; i++) {
+                  if (Thread.currentThread().getName().equals("兔子") &&  i%10==0){
+                      try {
+                          Thread.sleep(1);
+                      } catch (InterruptedException e) {
+                          e.printStackTrace();
+                      }
+                  }
+
+                  if(i>=100){
+                      winer = Thread.currentThread().getName();
+                      System.out.println(winer+"赢了");
+                  }
+                  if(winer!=null){
+                      break;
+                  }
+                  System.out.println(Thread.currentThread().getName()+"==>跑了"+i);
+              }
+          }
+
+
+          public static void main(String[] args) {
+              Race race = new Race();
+
+              new Thread(race,"兔子").start();
+              new Thread(race,"乌龟").start();
+          }
+      }
+
+      ```
+   3. 实现Callable接口
+
+      ```java
+      public class CallableTest implements Callable<Boolean> {
+          @Override
+          public Boolean call() throws Exception {
+              System.out.println(Thread.currentThread().getName());
+              return true;
+          }
+
+          public static void main(String[] args) throws ExecutionException, InterruptedException {
+              CallableTest callableTest = new CallableTest();
+
+              ExecutorService service = Executors.newFixedThreadPool(1);
+              Future<Boolean> submit = service.submit(callableTest);
+              Boolean aBoolean = submit.get();
+              System.out.println(aBoolean);
+              service.shutdownNow();
+          }
+      }
+
+      ```
+   4. 静态代理模式和lamda
+
+      ```java
+      public class StaticProxy {
+
+          public static void main(String[] args) {
+             //静态代理
+              Me me = new Me();
+              DaiGou daiGou = new DaiGou(me);
+              daiGou.shopping();
+
+            //测速lamda
+              ShopDog dog = () -> System.out.println("lambda");
+              dog.shopping();
+          }
+      }
+
+      interface ShopDog{
+          public void shopping();
+      }
+
+      class Me implements ShopDog{
+
+          @Override
+          public void shopping() {
+              System.out.println("买狗");
+          }
+      }
+
+      class DaiGou implements ShopDog{
+          private ShopDog target;
+
+          public  DaiGou(ShopDog target){
+              this.target = target;
+          }
+
+          @Override
+          public void shopping() {
+              before();
+              this.target.shopping();
+              after();
+          }
+
+          private void before() {
+              System.out.println("知名代购公司");
+          }
+          private void after() {
+              System.out.println("收尾款");
+          }
+      }
+      ```
