Update Post “多线程和异步专题”

--- a/source/_posts/多线程和异步专题.md
+++ b/source/_posts/多线程和异步专题.md
@@ -27,7 +27,6 @@ date: 2021-12-21T08:58:41.072Z
           }
 
       }
-
       ```
    2. 实现Runabble接口
 
@@ -89,7 +88,6 @@ date: 2021-12-21T08:58:41.072Z
               new Thread(race,"乌龟").start();
           }
       }
-
       ```
    3. 实现Callable接口
 
@@ -111,7 +109,6 @@ date: 2021-12-21T08:58:41.072Z
               service.shutdownNow();
           }
       }
-
       ```
    4. 静态代理模式和lamda
 
@@ -164,3 +161,77 @@ date: 2021-12-21T08:58:41.072Z
           }
       }
       ```
+3. 线程状态
+
+   1. 停止
+
+      > 建议线程正常停止——>利用次数，不建议死循环
+      >
+      > 建议使用标志位——>设置一个标志位
+      >
+      > 不要使用stop或者destroy等过时或者JDK不建议使用的方法
+
+      ```java
+      public class TestStop implements Runnable {
+          private boolean flag = true;
+
+          @Override
+          public void run() {
+              while(flag){
+                  System.out.println("线程进行中。。。");
+              }
+          }
+
+          public void stop(){
+              this.flag = false;
+          }
+
+          public static void main(String[] args) {
+              TestStop testStop = new TestStop();
+              new Thread(testStop).start();
+
+              for (int i = 0; i < 1000; i++) {
+                  System.out.println("main"+i);
+                  if(i==900){
+                      testStop.stop();
+                      System.out.println("线程结束");
+                  }
+              }
+          }
+      }
+      ```
+   2. 休眠
+
+      ```java
+      public static void main(String[] args) throws InterruptedException {
+      //        daojishi();
+              shijian();
+          }
+
+          public static void daojishi() throws InterruptedException {
+              int flag = 10;
+
+              while(true){
+                  if(flag==0){
+                      System.out.println("结束");
+                      break;
+                  }
+                  Thread.sleep(1000);
+                  System.out.println(flag--);
+              }
+          }
+
+          public static void shijian() throws InterruptedException {
+              Date date = new Date(System.currentTimeMillis());
+              while(true){
+                  Thread.sleep(1000);
+                  SimpleDateFormat dateFormat = new SimpleDateFormat("HH:mm:ss");
+                  String s = dateFormat.format(date);
+                  System.out.println(s);
+                  date = new Date(System.currentTimeMillis());
+              }
+
+
+          }
+      ```
+   3.
