--- a/source/_posts/多线程和异步专题.md
+++ b/source/_posts/多线程和异步专题.md
@@ -234,4 +234,121 @@ date: 2021-12-21T08:58:41.072Z
 
           }
       ```
-   3.
+   3. 礼让
+
+      ```java
+      public class TestYield implements Runnable {
+          @Override
+          public void run() {
+              System.out.println("进程开始");
+              Thread.yield();
+              System.out.println("进程结束");
+          }
+
+          public static void main(String[] args) {
+
+
+              Thread thread = new Thread(new TestYield(),"李明");
+              Thread thread1 = new Thread(new TestYield(),"老师");
+
+              thread.start();
+              thread1.start();
+          }
+      }
+      ```
+   4. 插队
+
+      ```java
+      public class TestJoin implements Runnable {
+          @Override
+          public void run() {
+              for (int i = 0; i < 1000; i++) {
+                  System.out.println("vip线程。。。。。"+i);
+              }
+          }
+
+
+          public static void main(String[] args) throws InterruptedException {
+              TestJoin testJoin = new TestJoin();
+              Thread thread = new Thread(testJoin);
+              thread.start();
+
+              for (int i = 0; i < 500; i++) {
+                  if(i==200){
+                      thread.join();
+                  }
+                  System.out.println("main线程....."+i);
+              }
+
+
+          }
+      }
+      ```
+   5. 线程状态
+
+      ```java
+      public static void main(String[] args) {
+              Thread thread = new Thread(() -> {
+                  for (int i = 0; i < 5; i++) {
+                      try {
+                          Thread.sleep(1000);
+                      } catch (InterruptedException e) {
+                          e.printStackTrace();
+                      }
+                  }
+              });
+
+              Thread.State state = thread.getState();
+              System.out.println(state); //NEW
+        
+              thread.start();
+              state = thread.getState();
+              System.out.println(state);//RUNNABLE
+
+              while (state!=Thread.State.TERMINATED){
+                  try {
+                      Thread.sleep(10);
+                  } catch (InterruptedException e) {
+                      e.printStackTrace();
+                  }
+
+                  state = thread.getState();
+                  System.out.println(state); //TIMED_WAITING
+              }
+      //TERMINATED
+          }
+      ```
+   6. 优先级
+
+      ```java
+      public static void main(String[] args) {
+              Thread thread = new Thread(() -> {
+                  for (int i = 0; i < 5; i++) {
+                      try {
+                          Thread.sleep(1000);
+                      } catch (InterruptedException e) {
+                          e.printStackTrace();
+                      }
+                  }
+              });
+
+              Thread.State state = thread.getState();
+              System.out.println(state);
+
+              thread.start();
+              state = thread.getState();
+              System.out.println(state);
+
+              while (state!=Thread.State.TERMINATED){
+                  try {
+                      Thread.sleep(10);
+                  } catch (InterruptedException e) {
+                      e.printStackTrace();
+                  }
+
+                  state = thread.getState();
+                  System.out.println(state);
+              }
+
+          }
+      ```
