--- a/source/_posts/多线程和异步专题.md
+++ b/source/_posts/多线程和异步专题.md
@@ -321,34 +321,33 @@ date: 2021-12-21T08:58:41.072Z
    6. 优先级
 
       ```java
-      public static void main(String[] args) {
-              Thread thread = new Thread(() -> {
-                  for (int i = 0; i < 5; i++) {
-                      try {
-                          Thread.sleep(1000);
-                      } catch (InterruptedException e) {
-                          e.printStackTrace();
-                      }
-                  }
-              });
+      public class TestPriority {
+          public static void main(String[] args) {
 
-              Thread.State state = thread.getState();
-              System.out.println(state);
+              System.out.println(Thread.currentThread().getName()+"-->"+Thread.currentThread().getPriority());
 
+              MyThreads myThreads = new MyThreads();
+
+              Thread thread = new Thread(myThreads);
+              Thread thread1 = new Thread(myThreads);
+              Thread thread2 = new Thread(myThreads);
+
+              thread1.setPriority(8);
               thread.start();
-              state = thread.getState();
-              System.out.println(state);
 
-              while (state!=Thread.State.TERMINATED){
-                  try {
-                      Thread.sleep(10);
-                  } catch (InterruptedException e) {
-                      e.printStackTrace();
-                  }
+              thread1.setPriority(1);
+              thread1.start();
 
-                  state = thread.getState();
-                  System.out.println(state);
-              }
-
+              thread2.setPriority(Thread.MAX_PRIORITY);
+              thread2.start();
           }
+
+      }
+
+      class MyThreads implements Runnable{
+          @Override
+          public void run() {
+              System.out.println(Thread.currentThread().getName()+"-->"+Thread.currentThread().getPriority());
+          }
+      }
       ```
