Update Post “多线程和异步专题”

--- a/source/_posts/多线程和异步专题.md
+++ b/source/_posts/多线程和异步专题.md
@@ -351,3 +351,283 @@ date: 2021-12-21T08:58:41.072Z
           }
       }
       ```
+   7. 守护线程
+
+      ```java
+      public class TestDaemon {
+          public static void main(String[] args) {
+              God god = new God();
+
+              Thread thread = new Thread(god);
+              thread.setDaemon(true);  //守护开启
+              thread.start();
+
+              You you = new You();
+              new Thread(you).start();
+          }
+      }
+
+      class God implements Runnable{
+
+          @Override
+          public void run() {
+              while(true){
+
+                  System.out.println("上帝爱世人");
+              }
+          }
+      }
+
+      class You implements Runnable{
+
+          @Override
+          public void run() {
+              for (int i = 0; i < 36500; i++) {
+                  System.out.println("开心的第"+i+"天");
+              }
+          }
+      }
+      ```
+   8. 线程未同步，不安全
+
+      ```java
+      public class UnSafeTocket {
+          public static void main(String[] args) {
+              Tocket tocket = new Tocket();
+
+              Thread thread = new Thread(tocket,"小明");
+              thread.start();
+              Thread thread1 = new Thread(tocket,"小华");
+              thread1.start();
+              Thread thread2 = new Thread(tocket,"小东");
+              thread2.start();
+          }
+      }
+
+      class Tocket implements Runnable{
+          private int sum = 10;
+          boolean flag = true;
+
+          @Override
+          public void run() {
+              while (flag){
+                  try {
+                      buy();
+                  } catch (InterruptedException e) {
+                      e.printStackTrace();
+                  }
+              }
+          }
+          //加synchronized安全
+          private  void buy() throws InterruptedException { 
+              if(sum<=0){
+                  flag=false;
+                  return;
+              }
+
+              Thread.sleep(10);
+              System.out.println(Thread.currentThread().getName()+"-->"+sum--);
+          }
+      }
+
+      ```
+   9. 同步
+
+      *synchronized方法*和*synchronized块*
+
+      ```java
+      上面buy方法加 synchronized
+      ```
+   10. 死锁
+
+       > 多个线程各自占有一-些共享资源,并且互相等待其他线程占有的资源才能运行,而导致两个或者多个线程都在等待对方释放资源,都停止执行的情形. 某一个同步块同时拥有“两个以上对象的锁”时,就可能会发生“死锁”的问题.
+   11. Lock
+
+       ```java
+       ReentrantLock lock = new ReentrantLock();
+       lock.lock();
+
+       lock.unlock(); //finally中
+       ```
+
+       ##### synchronized与Lock对比：
+
+       > Lock是显式锁(手动开启和关闭锁，别忘记关闭锁) synchronized是隐式锁， 出了作用域自动释放
+       >
+       > Lock只有代码块锁，synchronized有代码块锁和方法锁
+       >
+       > 使用Lock锁，JVM将花费较少的时间来调度线程，性能更好。并且具有更好的扩展性(提供更多的子类)
+       >
+       > 优先使用顺序:Lock >同步代码块(已经进入了方法体，分配了相应资源) >同步方法(在方法体之外)
+4. 线程通信
+
+   1. 生产者和消费者问题   **管程法**
+
+      ```java
+      public class TestPc {
+
+          public static void main(String[] args) {
+              Container container = new Container();
+
+              new Consumer(container).start();
+              new Producer(container).start();
+
+          }
+      }
+
+
+      class Chicken{
+          public int id;
+
+          public Chicken(int id){
+              this.id = id;
+          }
+      }
+
+      class Container{
+          private Chicken[] chickens = new Chicken[10];
+          int count = 0;
+
+          public synchronized void push(Chicken chicken) throws InterruptedException {
+              if(count == chickens.length){
+                  this.wait();
+              }
+              chickens[count] = chicken;
+              count++;
+
+              this.notifyAll();
+          }
+
+          public synchronized Chicken pop() throws InterruptedException {
+              if(count==0){
+                  this.wait();
+              }
+              count--;
+              Chicken chicken = chickens[count];
+
+              this.notifyAll();
+              return chicken;
+          }
+
+      }
+
+      class Consumer extends  Thread{
+          Container container;
+          public Consumer(Container container){
+              this.container = container;
+          }
+
+          @Override
+          public void run(){
+              for (int i = 0; i < 100; i++) {
+                  try {
+                      System.out.println("消费-----第"+container.pop().id+"只鸡");
+                  } catch (InterruptedException e) {
+                      e.printStackTrace();
+                  }
+              }
+          }
+      }
+
+      class Producer extends  Thread{
+          Container container;
+          public Producer(Container container){
+              this.container = container;
+          }
+
+          @Override
+          public void run(){
+              for (int i = 0; i < 100; i++) {
+                  try {
+                      container.push(new Chicken(i));
+                  } catch (InterruptedException e) {
+                      e.printStackTrace();
+                  }
+                  System.out.println("生产第"+i+"只鸡");
+              }
+          }
+      }
+      ```
+   2. 生产者和消费者问题   信号灯
+
+      ```java
+      public class TestPc2 {
+          public static void main(String[] args) {
+              Tv tv = new Tv();
+
+              new Wathcher(tv).start();
+              new Start(tv).start();
+          }
+      }
+
+      class Wathcher extends Thread{
+          Tv tv;
+
+          public Wathcher(Tv tv){
+              this.tv  = tv;
+          }
+
+          @Override
+          public void run(){
+              for (int i = 0; i < 20; i++) {
+                  try {
+                      tv.watch();
+                  } catch (InterruptedException e) {
+                      e.printStackTrace();
+                  }
+              }
+          }
+      }
+
+      class Start extends Thread{
+          Tv tv;
+
+          public Start(Tv tv){
+              this.tv  = tv;
+          }
+
+
+          @Override
+          public void run(){
+              for (int i = 0; i < 20; i++) {
+                  if(i%2==0){
+                      try {
+                          tv.play("hahahaha");
+                      } catch (InterruptedException e) {
+                          e.printStackTrace();
+                      }
+                  }else{
+                      try {
+                          tv.play("lalalala");
+                      } catch (InterruptedException e) {
+                          e.printStackTrace();
+                      }
+                  }
+              }
+          }
+      }
+
+      class Tv{
+          public String name;
+          public boolean flag = true;
+
+          public synchronized void play(String name) throws InterruptedException {
+              if(!flag){
+                  this.wait();
+              }
+              System.out.println("演了"+name);
+              this.notifyAll();
+              this.name = name;
+              this.flag = !flag;
+          }
+
+          public synchronized void watch() throws InterruptedException {
+              if(flag){
+                  this.wait();
+              }
+              System.out.println("观看了"+name);
+              this.notifyAll();
+              this.flag = !flag;
+          }
+      }
+      ```
