Update Post “多线程和异步专题”

--- a/source/_posts/多线程和异步专题.md
+++ b/source/_posts/多线程和异步专题.md
@@ -429,7 +429,6 @@ date: 2021-12-21T08:58:41.072Z
               System.out.println(Thread.currentThread().getName()+"-->"+sum--);
           }
       }
-
       ```
    9. 同步
 
@@ -631,3 +630,34 @@ date: 2021-12-21T08:58:41.072Z
           }
       }
       ```
+5. 线程池
+
+   > 提高响应速度（减少了创建新线程的时间）
+   >
+   >  降低资源消耗
+   >
+   > 便于线程管理
+
+   ```java
+   public class TestPool {
+
+       public static void main(String[] args) {
+           ExecutorService service = Executors.newFixedThreadPool(10);
+
+           service.execute(new MyPThread());
+           service.execute(new MyPThread());
+           service.execute(new MyPThread());
+           service.execute(new MyPThread());
+
+           service.shutdownNow();
+       }
+   }
+
+   class MyPThread implements Runnable{
+
+       @Override
+       public void run() {
+           System.out.println(Thread.currentThread().getName());
+       }
+   }
+   ```
